fixed highlight js only working on Firefox #26

--- a/src/trmd3-specific.css
+++ b/src/trmd3-specific.css
@@ -12,11 +12,7 @@ body {
 }
 
 .body-dark-theme {
-	background: linear-gradient(
-		90deg,
-		rgb(82, 197, 254) 0%,
-		rgb(248, 194, 255) 100%
-	);
+	background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
 }
 
 /* TRMD3 */
